--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,11 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="org.logicprobe.printsizer.ui.Converter" />
-
         <import type="android.view.View" />
-
         <variable
             name="homeViewModel"
             type="org.logicprobe.printsizer.ui.home.HomeViewModel" />
@@ -31,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="@dimen/activity_vertical_margin">
+                android:paddingTop="@dimen/form_vertical_margin">
 
                 <TextView
                     android:id="@+id/textViewSmallerPrint"
@@ -40,9 +37,8 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:text="@string/label_smaller_print"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/primaryColor" />
-
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/editSmallerHeightLayout"
@@ -83,10 +79,8 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <View
-                    android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:background="?android:attr/listDivider" />
 
                 <TextView
@@ -94,9 +88,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/form_vertical_margin"
+                    android:layout_marginVertical="@dimen/form_vertical_margin"
                     android:text="@string/label_larger_print"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:textColor="@color/primaryColor" />
 
                 <com.google.android.material.textfield.TextInputLayout
